# streaming-jupyter-integrations

./: .eslintignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  Dockerfile  MANIFEST.in  Pipfile  README.md  install.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: prepare-release.yml  publish.yml  python-package.yml
examples/: basic.ipynb  basic_with_config.ipynb  basic_with_password_variables.ipynb  basic_with_variables.ipynb  filename.txt  flink_show_table_tree.ipynb  local_java_udf.ipynb  remote_java_udf.ipynb  sample_config.json  udf.ipynb
flink/flink-table-planner-loader/: README.md  modify-jar.sh  pom.xml
flink/flink-table-planner-loader/src/main/java/org/apache/flink/table/planner/plan/metadata/: FlinkRelMetadataQuery.java
src/: extractors.ts  index.ts
streaming_jupyter_integrations/: __init__.py  cast_utils.py  config_utils.py  deployment_bar.py  display.py  execution_result_fetcher.py  integrations.py  jar_handler.py  magics.py  notebook_converter.py  reflection.py  schema_view.py  sql_syntax_highlighting.py  sql_utils.py  variable_substitution.py  variablesubstitution.py  yarn.py
streaming_jupyter_integrations/examples/: basic.ipynb  basic_with_variables.ipynb  udf.ipynb
tests/: test_cell_content_formatter.py  test_config_utils.py  test_jar_handler.py  test_reflection.py  test_schema_view.py  test_sql_syntax_highlighting.py  test_sql_utils.py  test_yarn.py
